# ai-multiagents-architectures

./: README.md  pyproject.toml
examples/: 1_simple_graph.py  2_simple_graph_llm.py  3_swarm.py  4_supervisor_tools.py  5_hierarchical.py  6_plan_and_execute.py  7_hierarchical_mlflow.py  8_create_prompts_for_planner.py  9_plan_and_execute_mlflow.py
