[project]
name = "ai-multiagents-architectures"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriele Grillo"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "marimo (>=0.17.6,<0.18.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain-anthropic (>=1.0.1,<2.0.0)",
    "langgraph-swarm @ git+https://github.com/langchain-ai/langgraph-swarm-py.git@mdrxy/lift-deps",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langgraph-supervisor (>=0.0.30,<0.0.31)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "mlflow (>=3.5.1,<4.0.0)",
    "langchain (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "ddgs (>=9.7.0,<10.0.0)"

]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.marimo.runtime]
dotenv = [".env"]

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000